--- a/index.html
+++ b/index.html
@@ -4,6 +4,17 @@
 <title></title>
 <meta charset="utf-8">
 </head>
+<style type="text/css>
+body{
+background-color:#1abc9c;
+
+
+
+
+}
+
+
+</style>
 <body>
 <h1>Hi</h1>
 </body>
